--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "docs": "ts-node src/docs/swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,13 @@
     "mongoose": "^9.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^4.6.3",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "cors": "^2.8.5",
+    "@types/cors": "^2.8.17",
+    "@types/swagger-ui-express": "4.1.8"
   }
 }
