--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.5",
+    "@types/swagger-ui-express": "4.1.8",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "yup": "^1.7.1",
+    "nodemailer": "^7.0.12",
+    "nodemon": "^3.1.4",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^4.6.3",
-    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "cors": "^2.8.5",
-    "@types/cors": "^2.8.17",
-    "@types/swagger-ui-express": "4.1.8"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3",
+    "yup": "^1.7.1"
   }
 }
